# OpenCam3D

./: .editorconfig  .gitignore  .gitmodules  LICENSE  OpenCam3D.sln  README.md  build.sh
calibration/: CMakeLists.txt  calibrate_function.cpp  calibrate_function.h  calibrate_machine.cpp  calibrate_machine.h  calibration.cpp  calibration.vcxproj  calibration.vcxproj.filters
cmd/: CMakeLists.txt  cmd.cpp  cmd.vcxproj  cmd.vcxproj.filters
docs/: BOM List.xlsx  BOM.csv  DFX800相机搭建指南.docx  DFX800系列相机接口文档.docx
example/: CMakeLists.txt  example.cpp  example.vcxproj  example.vcxproj.filters  open_cam3d_sdk.h
firmware/: CMakeLists.txt  GxIAPI.h  calib_param.txt  camera.cpp  camera.h  camera_basler.cpp  camera_basler.h  camera_dh.cpp  camera_dh.h  camera_galaxy.cpp  camera_galaxy.h  camera_param.h  camera_server.cpp  camera_server_new.cpp  configure_auto_exposure.cpp  configure_auto_exposure.h  configure_standard_plane.cpp  configure_standard_plane.h  easylogging++.cc  easylogging++.h  encode_cuda.cu  encode_cuda.cuh  i2c.cpp  i2c.h  lightcrafter3010.cpp  lightcrafter3010.h  protocol.h  scan3d.cpp  scan3d.h  system_config_settings.cpp  system_config_settings.h
functest/: case.h  case_GetFrame01.cpp  case_GetPointCloud.cpp  evaluate.cpp  evaluate.h  functest.cpp  functest.vcxproj  functest.vcxproj.filters  help.cpp  help.h  status.cpp  status.h
gui/: CMakeLists.txt  PrecisionTest.cpp  PrecisionTest.h  calibration_param_gui.cpp  calibration_param_gui.h  calibration_param_gui.ui  camera_capture_gui.cpp  camera_capture_gui.h  camera_capture_gui.ui  camera_gui.cpp  camera_gui.h  camera_gui.ui  dexforce_camera_gui.cpp  dexforce_camera_gui.h  dexforce_camera_gui.qrc  dexforce_camera_gui.ui  file_io_function.cpp  file_io_function.h  gui.aps  gui.vcxproj  gui.vcxproj.filters  main.cpp  myapp.aps  myapp.rc  resource.h  select_calibration_board_gui.cpp  select_calibration_board_gui.h  select_calibration_board_gui.ui  settings_file_function.cpp  settings_file_function.h
linux/example/: CMakeLists.txt  example.cpp  open_cam3d_sdk.h
linux/source/: CMakeLists.txt  easylogging++.cc  easylogging++.h  open_cam3d.cpp  open_cam3d.h  socket_tcp.cpp  socket_tcp.h  triangulation.cpp  utils.h
sdk/: CMakeLists.txt  DF8.cpp  DF8.h  open_cam3d.cpp  open_cam3d.h  sdk.vcxproj  sdk.vcxproj.filters  socket_tcp.cpp  socket_tcp.h  utils.h
src/: encode.cpp  encode.h  reconstruct.cpp  reconstruct.h  solution.cpp  solution.h  triangulation.cpp  triangulation.h
test/: AnalyseError.cpp  AnalyseError.h  CMakeLists.txt  FilterModule.cpp  FilterModule.h  LookupTableFunction.cpp  LookupTableFunction.h  encode.cpp  encode.h  reconstruct.cpp  reconstruct.h  solution.cpp  solution.h  support_function.cpp  support_function.h  test.cpp  test.vcxproj  test.vcxproj.filters  triangulation.cpp  triangulation.h
tools/: create_gray_code.py  create_patterns.py  depthmap2cloud.py  depthmap2color.py  open_cam3d_gui.sh  pack.sh  pattern.csv
version/: build.bat  build.sh  version.h.tmp
